--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+Hyperopt = "93e5fe13-2215-51db-baaf-2e9a34fb2712"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
@@ -26,4 +27,5 @@ Ripserer = "aa79e827-bd0b-42a8-9f10-2b302677a641"
 RobustTDA = "0486e2d6-2f70-4752-bbcc-413e24845f5e"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
