--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+GR_jll = "d2c73de3-f751-5644-a686-071e5b155ba9"
 Hyperopt = "93e5fe13-2215-51db-baaf-2e9a34fb2712"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
